<resources>
    <string name="app_name" translatable="false">Astiag</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sub_title_test">Subtitle test</string>
    <string name="title_test">Title test</string>

    <string name="main_fragment_title">Main Fragment Title</string>
    <string name="blank_fragment_title">Blank Fragment Title</string>

    <string name="main_snack_bar">This is a snack bar</string>
    <string name="main_snack_bar_action">OK</string>

    <string name="nav_setting">Setting</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_transaction">Transaction</string>
    <string name="nav_trips">Trips</string>
    <string name="nav_support">Support</string>
    <string name="nav_credit">Credit</string>

    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="permission_request">Permission request</string>
    <string name="location_permission_rationale">To be able to get current location we require access to your device\'s location capabilities</string>

    <string name="please_wait">Please wait…</string>
    <string name="accept_source">Accept source</string>
    <string name="accept_destination">Accept destination</string>

    <string name="server_error">Server error occurred!</string>
    <string name="loading_address">Loading address..</string>
    <string name="unknown_address">Unknown address</string>

</resources>
