<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/ic_credit"
            android:title="@string/nav_credit" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_transaction"
            android:title="@string/nav_transaction" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_trip"
            android:title="@string/nav_trips" />
    </group>

    <group android:id="@+id/group_setting">
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/nav_support" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_exit" />
    </group>
</menu>
